--- a/style.scss
+++ b/style.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Aboreto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=DynaPuff&display=swap');
 * {
     margin: 0;
     padding: 0;
@@ -6,6 +8,11 @@
 body {
     padding: 5px;
     text-align: center;
+    justify-content: center;
+    text-align: center;
+    .d-block{
+        margin: auto;
+    }
 
     .wpp {
         position: fixed;
@@ -15,24 +22,31 @@ body {
         align-items: flex-start;
         margin: 20px;
         text-decoration: none;
-        background-color: white;
-        width: 51px;
-        height: 57px;
+        background-color: green;
+        width: 70px;
+        height: 70px;
         border-radius: 55%;
 
         .fa-whatsapp {
+            align-items: center;
             font-size: 4em;
-            color: green;
+            color: white;
             position: absolute;
+            margin: 3px 0px 3px 7px;
         }
     }
 
-
     h1 {
         margin: 3px;
+        font-family: 'Aboreto', cursive;
     }
 
     h2 {
+        font-size: 1em;
+        font-family: 'Aboreto', cursive;
+    }
+    h5{
+        font-family: 'Aboreto', cursive;
         font-size: 1em;
     }
 
@@ -45,6 +59,7 @@ body {
         color: purple;
         border-color: purple;
         font-size: 1em;
+        font-family: 'DynaPuff', cursive;
 
         &:hover {
             background-color: purple;
@@ -57,6 +72,7 @@ body {
         flex-wrap: wrap;
         justify-content: center;
         margin-top: 30px;
+        font-family: 'DynaPuff', cursive;
 
         .card {
             max-width: 130px !important;
@@ -68,12 +84,24 @@ body {
                 background-color: white;
                 color: purple;
                 border-color: purple;
+                font-family: 'DynaPuff', cursive;
 
                 &:hover {
                     background-color: purple;
                     color: white;
                 }
             }
+        }
+    }
+
+    footer{
+        background-color: #2b2f31;
+        display: flex;
+        justify-content: space-around;
+        h3, h4{
+            color: white;
+            margin: 3px;
+            font-family: 'Aboreto', cursive;
         }
     }
 }
