--- a/style.scss
+++ b/style.scss
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Aboreto&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=DynaPuff&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -10,7 +11,8 @@ body {
     text-align: center;
     justify-content: center;
     text-align: center;
-    .d-block{
+
+    .d-block {
         margin: auto;
     }
 
@@ -26,6 +28,38 @@ body {
         width: 70px;
         height: 70px;
         border-radius: 55%;
+
+        &::before,
+        &::after {
+            content: "";
+            position: absolute;
+            width: calc(100% + 0px);
+            height: calc(100% + 0px);
+            border: 2px solid #44bd32;
+            border-radius: 50%;
+            animation: wpp 1.5s linear infinite;
+        }
+
+        &::after {
+            animation-delay: 0.4s;
+        }
+
+        @keyframes wpp {
+            0% {
+                transform: scale(0.5);
+                opacity: 0;
+            }
+
+            50% {
+                transform: scale(1);
+                opacity: 1;
+            }
+
+            100% {
+                transform: scale(1.4);
+                opacity: 0;
+            }
+        }
 
         .fa-whatsapp {
             align-items: center;
@@ -45,7 +79,8 @@ body {
         font-size: 1em;
         font-family: 'Aboreto', cursive;
     }
-    h5{
+
+    h5 {
         font-family: 'Aboreto', cursive;
         font-size: 1em;
     }
@@ -73,13 +108,11 @@ body {
         justify-content: center;
         margin-top: 30px;
         font-family: 'DynaPuff', cursive;
-
         .card {
             max-width: 130px !important;
             margin: 10px;
             border-color: purple;
             box-shadow: rgba(240, 46, 170, 0.2) 2px 2px, rgba(240, 46, 170, 0.1) 5px 5px, rgba(240, 46, 170, 0.05) 10px 10px;
-
             .btn {
                 background-color: white;
                 color: purple;
@@ -94,11 +127,13 @@ body {
         }
     }
 
-    footer{
+    footer {
         background-color: #2b2f31;
         display: flex;
         justify-content: space-around;
-        h3, h4{
+
+        h3,
+        h4 {
             color: white;
             margin: 3px;
             font-family: 'Aboreto', cursive;
