--- a/style.scss
+++ b/style.scss
@@ -12,7 +12,8 @@ body {
     justify-content: center;
     text-align: center;
 
-    .d-block {
+    .carousel {
+        max-width: 500px;
         margin: auto;
     }
 
@@ -75,12 +76,14 @@ body {
         font-family: 'Aboreto', cursive;
     }
 
-    h2 {
+    h3 {
         font-size: 1em;
         font-family: 'Aboreto', cursive;
+        margin-top: 10px;
     }
 
-    h5 {
+    h2,
+    h4 {
         font-family: 'Aboreto', cursive;
         font-size: 1em;
     }
@@ -108,11 +111,14 @@ body {
         justify-content: center;
         margin-top: 30px;
         font-family: 'DynaPuff', cursive;
+        position: relative;
+
         .card {
             max-width: 130px !important;
             margin: 10px;
             border-color: purple;
             box-shadow: rgba(240, 46, 170, 0.2) 2px 2px, rgba(240, 46, 170, 0.1) 5px 5px, rgba(240, 46, 170, 0.05) 10px 10px;
+
             .btn {
                 background-color: white;
                 color: purple;
@@ -124,6 +130,54 @@ body {
                     color: white;
                 }
             }
+            //?VENTANAS EMERGENTES
+            .modal_container {
+                display: flex;
+                position: fixed;
+                width: 100%;
+                height: 100vh;
+                background-color: rgba(0, 0, 0, 0.7);
+                align-items: center;
+                justify-content: center;
+                pointer-events: none;
+                left: 0;
+                right: 0;
+                top: 0;
+                opacity: 0;
+                z-index: 99;
+
+                .modal_ {
+                    background-color: #fff;
+                    max-width: 600px;
+                    padding: 30px 10px;
+                    border-radius: 5px;
+                    margin: auto 15px;
+                    text-align: center;
+
+                    .carrito {
+                        display: flex;
+                        justify-content: space-around;
+
+                        .btn {
+                            background-color: white;
+                            color: purple;
+                            border-color: purple;
+                            font-family: 'DynaPuff', cursive;
+                            width: auto;
+                            margin: 5px;
+
+                            &:hover {
+                                background-color: purple;
+                                color: white;
+                            }
+                        }
+                    }
+                }
+            }
+            .open_close {
+                opacity: 1;
+                pointer-events: auto;
+            }//?FIN EMERGENTES
         }
     }
 
