--- a/style.scss
+++ b/style.scss
@@ -17,75 +17,89 @@ body {
         margin: auto;
     }
 
-    .wpp {
+    .compra{
         position: fixed;
         bottom: 0;
         z-index: 10;
         display: flex;
-        align-items: flex-start;
-        margin: 20px;
-        text-decoration: none;
-        background-color: green;
-        width: 70px;
-        height: 70px;
-        border-radius: 55%;
-
-        &::before,
-        &::after {
-            content: "";
-            position: absolute;
-            width: calc(100% + 0px);
-            height: calc(100% + 0px);
-            border: 2px solid #44bd32;
-            border-radius: 50%;
-            animation: wpp 1.5s linear infinite;
+        justify-content: space-between;
+        width: 100%;
+        
+        .verCarrito{
+            width: 50px;
+            height: 50px;
+            margin: 15px 25px;
+            cursor: pointer;
         }
-
-        &::after {
-            animation-delay: 0.4s;
-        }
-
-        @keyframes wpp {
-            0% {
-                transform: scale(0.5);
-                opacity: 0;
+        .wpp {  
+            margin: 5px;
+            text-decoration: none;
+            background-color: green;
+            width: 70px;
+            height: 70px;
+            border-radius: 55%;
+    
+            &::before,
+            &::after {
+                content: "";
+                position: absolute;
+                width: calc(70px + 10px);
+                height: calc(70px + 10px);
+                border: 2px solid #44bd32;
+                border-radius: 50%;
+                animation: wpp 1.5s linear infinite;
+                margin: -6px -40px;
             }
-
-            50% {
-                transform: scale(1);
-                opacity: 1;
+    
+            &::after {
+                animation-delay: 0.4s;
             }
-
-            100% {
-                transform: scale(1.4);
-                opacity: 0;
+    
+            @keyframes wpp {
+                0% {
+                    transform: scale(0.5);
+                    opacity: 0;
+                }
+    
+                50% {
+                    transform: scale(1);
+                    opacity: 1;
+                }
+    
+                100% {
+                    transform: scale(1.4);
+                    opacity: 0;
+                }
             }
-        }
-
-        .fa-whatsapp {
-            align-items: center;
-            font-size: 4em;
-            color: white;
-            position: absolute;
-            margin: 3px 0px 3px 7px;
+    
+            .fa-whatsapp {
+                align-items: center;
+                font-size: 4em;
+                color: white;
+                position: absolute;
+                margin: 3px 0px 3px -27px;
+            }
         }
     }
+
 
     h1 {
         margin: 3px;
         font-family: 'Aboreto', cursive;
     }
-
-    h3 {
+    h3{
         font-size: 1em;
         font-family: 'Aboreto', cursive;
         margin-top: 10px;
     }
-
     h2,
     h4 {
         font-family: 'Aboreto', cursive;
         font-size: 1em;
+    }
+
+    h5{
+        font-size: .9em;
     }
 
     .pedido {
@@ -124,6 +138,7 @@ body {
                 color: purple;
                 border-color: purple;
                 font-family: 'DynaPuff', cursive;
+                font-size: 0.9em;
 
                 &:hover {
                     background-color: purple;
@@ -133,7 +148,7 @@ body {
             //?VENTANAS EMERGENTES
             .modal_container {
                 display: flex;
-                position: fixed;
+               position: fixed;
                 width: 100%;
                 height: 100vh;
                 background-color: rgba(0, 0, 0, 0.7);
@@ -156,21 +171,7 @@ body {
 
                     .carrito {
                         display: flex;
-                        justify-content: space-around;
-
-                        .btn {
-                            background-color: white;
-                            color: purple;
-                            border-color: purple;
-                            font-family: 'DynaPuff', cursive;
-                            width: auto;
-                            margin: 5px;
-
-                            &:hover {
-                                background-color: purple;
-                                color: white;
-                            }
-                        }
+                        justify-content: space-around;                   
                     }
                 }
             }
@@ -185,12 +186,11 @@ body {
         background-color: #2b2f31;
         display: flex;
         justify-content: space-around;
-
-        h3,
-        h4 {
+        p{
             color: white;
-            margin: 3px;
+            font-size: 1em;
             font-family: 'Aboreto', cursive;
+            margin: 5px 0 10px;
         }
     }
 }
