--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
 }
 
 body .carousel {
-  max-width: 500px;
+  max-width: 600px;
   margin: auto;
 }
 
@@ -145,7 +145,7 @@ body .cart .cart-box {
 }
 
 body .cart .cart-box .cart-img {
-  width: 50px;
+  width: 80px;
   -o-object-fit: contain;
      object-fit: contain;
 }
@@ -277,7 +277,7 @@ body .burguers {
 }
 
 body .burguers .card {
-  max-width: 130px !important;
+  max-width: 180px !important;
   margin: 10px;
   border-color: purple;
   -webkit-box-shadow: rgba(240, 46, 170, 0.2) 2px 2px, rgba(240, 46, 170, 0.1) 5px 5px, rgba(240, 46, 170, 0.05) 10px 10px;
@@ -299,6 +299,10 @@ body .burguers .card .btn {
   font-family: 'DynaPuff', cursive;
   font-size: 0.9em;
   margin: 5px;
+}
+
+body .burguers .card .btn .fa-cart-shopping {
+  width: 25px;
 }
 
 body .burguers .card .btn:hover {
@@ -326,6 +330,8 @@ body .burguers .card .modal_container {
   top: 0;
   opacity: 0;
   z-index: 99;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
 }
 
 body .burguers .card .modal_container .modal_ {
